--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="tab_text_2">Tab 2</string>
     <string name="tab_text_3">Tab 3</string>
     <string name="action_settings">Settings</string>
+    <string name="action_share">Share</string>
     <string name="section_format">Hello World from section: %1$d</string>
     <string name="nextPage">Next Page</string>
     <string name="video">Video</string>
